# C-CPP-course

./: .gitignore
code/: cmake-generator.py
code/01_ENV/: func2.c  verstaendnissfragen_simon_struck.txt
code/02_MENT/: a1.cpp  a4.cpp  a6.cpp  build.sh  grundgeruest.cpp  main_02_MENT.cpp  test.cpp  verstaendnissfragen.html  verstaendnissfragen.txt
code/03_FLOW_a/: CMakeLists.txt  verstaendnissfragen.txt
code/03_FLOW_a/src/: main_mp2_FLOW_a.cpp  solution.cpp  testat.cpp
code/03_FLOW_b/: controlFlowIntr  run.sh
code/04_UDEF/: CMakeLists.txt  RationalNumber.cpp  RationalNumber.hpp  verstaendnissfragen.txt
code/04_UDEF/src/: RationalNumber.cpp  RationalNumber.hpp  main_04_UDEF_a.cpp  main_04_UDEF_e.cpp
code/05_OO/: CMakeLists.txt  verstaendnissfragen.txt  verstaendnissfragen_b.txt
code/05_OO/src/: main_mp4_OO_a_vehicles.cpp  main_mp4_OO_b.cpp  shapes_main.cpp
code/06_POLY/: CMakeLists.txt  verstaendnissfragen.txt
code/06_POLY/src/: main_mp5_POLY.cpp  shapes.cpp
code/07_STD/: CMakeLists.txt  verstaendnissfragen.txt
code/07_STD/src/: main.cpp  modifikation.cpp  testat.cpp
code/08_PTRN/: CMakeLists.txt
code/08_PTRN/src/: main.cpp
code/08_PTRN/src/base/: main.cpp
code/08_PTRN/src/simulation/: Bank.cpp  Human.cpp  Simulation.cpp  Utils.h  headers.h  main.cpp
code/10_PITF/: CMakeLists.txt
code/11_PUTT/: CMakeLists.txt
src/01_ENV/: func1.c  func1.h  main.c  testat.c  verstaendnissfragen_simon_struck.txt
src/01_ENV/3.1/: func1.h  main.c
src/01_ENV/3.2/: a.out  func1.c  func2.h  main.c
src/02_MENT/: a1.c  a1.cpp  a2.cpp  a3.cpp  a5.cpp  functions.cpp  functions.hpp  int_to_bin.cpp  int_to_bin.hpp  int_to_hex.cpp  int_to_hex.hpp  main_02_MENT.cpp  pascal_string.cpp  pascal_string.hpp  print_pascal_string.cpp  print_pascal_string.hpp  test.cpp
src/03_FLOW_a/: CMakeLists.txt  build.sh  main_mp2_FLOW_a.cpp
src/04_UDEF/: main_04_UDEF_a.cpp  main_04_UDEF_e.cpp
src/05_OO/: build.sh  main_mp4_OO_b.cpp
src/06_POLY/: main_mp5_POLY.cpp
src/helpers/: AnsiConsole.cpp
temp/01_ENV/: build.sh  main.c
temp/02_MENT/: build.sh  limits_println.cpp  main_02_MENT.cpp  printlnDemo.cpp
temp/02_MENT/typedMemory/typedMemory/: main.cpp  typedMemory.cpp  typedMemory.hpp
temp/02_MENT/typedMemory/typedMemory.xcodeproj/: project.pbxproj
temp/02_MENT/typedMemory/typedMemory.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
temp/02_MENT/typedMemory/typedMemory.xcodeproj/project.xcworkspace/xcuserdata/clink.xcuserdatad/: UserInterfaceState.xcuserstate
temp/02_MENT/typedMemory/typedMemory.xcodeproj/xcuserdata/clink.xcuserdatad/xcschemes/: typedMemory.xcscheme  xcschememanagement.plist
temp/03_FLOW_b/: build.sh  main_ISR.cpp
temp/05_OO/: AnsiConsoleDemo.cpp  shapes_main.cpp
temp/helpers/: println.hpp
temp/xcode_projects/02_MENT_gg/02_MENT_gg.xcodeproj/: project.pbxproj
temp/xcode_projects/02_MENT_gg/02_MENT_gg.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
temp/xcode_projects/02_MENT_gg/02_MENT_gg.xcodeproj/project.xcworkspace/xcuserdata/clink.xcuserdatad/: UserInterfaceState.xcuserstate
temp/xcode_projects/02_MENT_gg/02_MENT_gg.xcodeproj/xcuserdata/clink.xcuserdatad/xcschemes/: 02_MENT_gg.xcscheme  xcschememanagement.plist
temp/xcode_projects/limits2/limits2/: main.cpp
temp/xcode_projects/limits2/limits2.xcodeproj/: project.pbxproj
temp/xcode_projects/limits2/limits2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
temp/xcode_projects/limits2/limits2.xcodeproj/project.xcworkspace/xcuserdata/clink.xcuserdatad/: UserInterfaceState.xcuserstate
temp/xcode_projects/limits2/limits2.xcodeproj/xcuserdata/clink.xcuserdatad/xcschemes/: limits2.xcscheme  xcschememanagement.plist
